--- a/index.html
+++ b/index.html
@@ -32,9 +32,11 @@
             <button id="set-btn">Set</button>
             <button id="start-btn">Start</button>
             <button id="stop-btn">Stop</button>
+            <button id="reset-btn">Reset</button>
         </div>
-    <script src="view.js" type="text/javascript"></script>
+        
     <script src="game-of-life.js" type="text/javascript"></script>
+    <script src="view.js" type="text/javascript"></script>
     </body>
     
 </html>
