changes to interactivity
some interactivity changes live clicks while the board is running.

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <br/>
             <button id="sup-btn">Speed Up</button>
             <button id="sdown-btn">Slow Down</button>
+            <button id="dflt-btn">Default Speed</button>
             <br/><br/>
             Matthew Bolin & Kayla Cook
         </div>
